--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #434343;
+  background: #ededed;
+  font-family: 'HanHei TC','PingFang TC', 'Helvetica Neue', 'Helvetica', 'STHeitiTC-Light', 'Arial', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.MuiTabs-vertical .MuiTabs-indicator {
+  right: auto;
+  left: 0;
+}
+
+.nav2 .MuiTab-root {
+  align-items: start;
+  font-weight: bold;
+}
+
+.main .MuiSelect-select {
+  padding: 7px 14px;
+  background: #0386f4;
+  color: #fff;
+  font-size: 14px;
+}
+
+.main .MuiSelect-icon {
+  color: #fff;
+}
+
+.main .MuiOutlinedInput-notchedOutline {
+  border: none;
 }
